v1.12.x/connectors/database/questdb/yaml.mdx
---
title: "Run the QuestDB Connector Externally"
description: "Use YAML to configure QuestDB database connections with metadata ingestion and view lineage extraction."
sidebarTitle: Run Externally
mode: "wide"
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.12.x/connectors/external-ingestion-deployment.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/questdb.png'
name="QuestDB"
stage="BETA"
availableFeatures={["Metadata", "View Lineage"]}
unavailableFeatures={["Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Sample Data", "Auto-Classification", "Owners", "Tags"]} />

In this section, we provide guides and references to use the QuestDB connector.

Configure and schedule QuestDB metadata workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Lineage](#lineage)

<ExternalIngestionDeployment />

## Requirements

QuestDB exposes metadata through its built-in table functions (`tables()`, `views()`, `materialized_views()`, and `table_columns()`). Any authenticated user can call these functions — no additional database grants are required beyond valid credentials and network access to the QuestDB PostgreSQL wire protocol port (default: **8812**).

### Python Requirements

<PythonRequirements />

To run the QuestDB ingestion, you will need to install:

```bash
pip3 install "openmetadata-ingestion[questdb]"
```

## Metadata Ingestion

All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/questdbConnection.json)
you can find the structure to create a connection to QuestDB.

In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.

The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)

### 1. Define the YAML Config

This is a sample config for QuestDB:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your QuestDB connector.

</ContentSection>

<ContentSection id={2} title="Type" lines="6">

**type**: Service type identifier. Set to `QuestDB`.

</ContentSection>

<ContentSection id={3} title="Username" lines="7">

**username**: Username to connect to QuestDB. The user should have enough privileges to read all the metadata.

</ContentSection>

<ContentSection id={4} title="Password" lines="8-9">

**password**: Password for the QuestDB user. Provided under `authType.password`.

</ContentSection>

<ContentSection id={5} title="Host and Port" lines="10">

**hostPort**: Host and port of the QuestDB service. QuestDB exposes the PostgreSQL wire protocol on port **8812** by default (e.g., `localhost:8812`).

</ContentSection>

<ContentSection id={6} title="Connection Options" lines="11-12">

**connectionOptions (Optional)**: Additional connection options to pass to the database during connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={7} title="Connection Arguments" lines="13-14">

**connectionArguments (Optional)**: Additional connection arguments such as security or protocol configs. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={8} title="Table Filter Pattern" lines="15-19">

**tableFilterPattern (Optional)**: Regex patterns to include or exclude specific tables from ingestion. Use `includes` to whitelist and `excludes` to blacklist table name patterns.

</ContentSection>

<ContentSection id={9} title="Source Config" lines="20-63">

<SourceConfigDef />

</ContentSection>

<ContentSection id={10} title="Sink Configuration" lines="64-66">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={11} title="Workflow Configuration" lines="67-83">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="questdb_config.yaml">

```yaml
source:
  type: questDB
  serviceName: <service_name>
  serviceConnection:
    config:
      type: QuestDB
      username: <username>
      authType:
        password: <password>
      hostPort: localhost:8812
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
      # tableFilterPattern:
      #   includes:
      #     - ".*"
      #   excludes:
      #     - <table>
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
<Lineage connector="questdb" />
